[gd_scene load_steps=3 format=3 uid="uid://threatoverlay"]

[ext_resource type="Script" path="res://scripts/ui/threat_overlay_controller.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0470588, 0.0666667, 0.0941176, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
border_color = Color(0.960784, 0.501961, 0.27451, 0.55)

[node name="ThreatOverlayPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 48.0
offset_right = -48.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")
visible = false

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Content" type="VBoxContainer" parent="Margin"]
unique_name_in_owner = true
anchors_preset = 8
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
separation = 12

[node name="Header" type="HBoxContainer" parent="Margin/Content"]
size_flags_horizontal = 3
alignment = 1

[node name="Title" type="Label" parent="Margin/Content/Header"]
text = "Threats"
size_flags_horizontal = 3
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="CloseButton" type="Button" parent="Margin/Content/Header"]
unique_name_in_owner = true
text = "Close"
custom_minimum_size = Vector2(96, 0)

[node name="Scroll" type="ScrollContainer" parent="Margin/Content"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThreatList" type="VBoxContainer" parent="Margin/Content/Scroll"]
unique_name_in_owner = true
size_flags_horizontal = 3
size_flags_vertical = 1
separation = 8

[node name="EmptyLabel" type="Label" parent="Margin/Content/Scroll/ThreatList"]
unique_name_in_owner = true
text = "No active threats."
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.698039, 0.737255, 0.768627, 1)

